--- a/Meal_Map/index.html
+++ b/Meal_Map/index.html
@@ -148,6 +148,6 @@
 </div>
 <!-- Chart.js Library -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="script.js"></script>
+<script src="script.js?v=1.1"></script>
 </body>
 </html>
