--- a/Meal_Map/index.html
+++ b/Meal_Map/index.html
@@ -31,7 +31,18 @@
             <label for="breakfast">Breakfast:</label>
             <div class="input-group">
                 <input type="text" id="breakfast" placeholder="e.g., Oatmeal with berries" aria-label="Breakfast food">
-                <input type="time" id="breakfast-time" aria-label="Breakfast time">
+                <select id="breakfast-time" aria-label="Breakfast time">
+                    <option value="">Select a time</option>
+                    <option value="06:00">6:00 AM</option>
+                    <option value="06:30">6:30 AM</option>
+                    <option value="07:00">7:00 AM</option>
+                    <option value="07:30">7:30 AM</option>
+                    <option value="08:00">8:00 AM</option>
+                    <option value="08:30">8:30 AM</option>
+                    <option value="09:00">9:00 AM</option>
+                    <option value="09:30">9:30 AM</option>
+                    <option value="10:00">10:00 AM</option>
+                </select>
                 <select id="breakfast-mood" aria-label="How you felt after breakfast">
                     <option value="none" selected disabled>How did it feel?</option>
                     <option value="energized">Energized</option>
@@ -44,7 +55,16 @@
             <label for="lunch">Lunch:</label>
             <div class="input-group">
                 <input type="text" id="lunch" placeholder="e.g., Grilled chicken salad" aria-label="Lunch food">
-                <input type="time" id="lunch-time" aria-label="Lunch time">
+                <select id="lunch-time" aria-label="Lunch time">
+                    <option value="">Select a time</option>
+                    <option value="11:00">11:00 AM</option>
+                    <option value="11:30">11:30 AM</option>
+                    <option value="12:00">12:00 PM</option>
+                    <option value="12:30">12:30 PM</option>
+                    <option value="13:00">1:00 PM</option>
+                    <option value="13:30">1:30 PM</option>
+                    <option value="14:00">2:00 PM</option>
+                </select>
                 <select id="lunch-mood" aria-label="How you felt after lunch">
                     <option value="none" selected disabled>How did it feel?</option>
                     <option value="energized">Energized</option>
@@ -57,7 +77,18 @@
             <label for="dinner">Dinner:</label>
             <div class="input-group">
                 <input type="text" id="dinner" placeholder="e.g., Salmon with roasted vegetables" aria-label="Dinner food">
-                <input type="time" id="dinner-time" aria-label="Dinner time">
+                <select id="dinner-time" aria-label="Dinner time">
+                    <option value="">Select a time</option>
+                    <option value="17:00">5:00 PM</option>
+                    <option value="17:30">5:30 PM</option>
+                    <option value="18:00">6:00 PM</option>
+                    <option value="18:30">6:30 PM</option>
+                    <option value="19:00">7:00 PM</option>
+                    <option value="19:30">7:30 PM</option>
+                    <option value="20:00">8:00 PM</option>
+                    <option value="20:30">8:30 PM</option>
+                    <option value="21:00">9:00 PM</option>
+                </select>
                 <select id="dinner-mood" aria-label="How you felt after dinner">
                     <option value="none" selected disabled>How did it feel?</option>
                     <option value="energized">Energized</option>
